--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite": "^5.0.8"
   }
 }
