Reset state on device disconnect Fixes #6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,8 @@
     /* resolve path */
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+      "@/*": ["./src/*"],
+    },
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
