--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.3.1"
-  }
+  },
+  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2"
 }
