--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -20,16 +20,16 @@ jobs:
         node-version-file: '.nvmrc'
         
     - name: Install dependencies
-      run: npm ci
+      run: pnpm ci
 
     - name: Run ESLint and Prettier
-      run: npm run lint
+      run: pnpm run lint
       
     - name: Run Typescript static checks
       run: tsc --noEmit
 
     - name: Run unit tests
-      run: npm test
+      run: pnpm test
 
     - name: Build project
-      run: npm run build
+      run: pnpm run build
