--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -14,10 +14,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
     
-    - name: Setup node from .nvmrc
-      uses: actions/setup-node@v4
-      with:
-        node-version-file: '.nvmrc'
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v3
         
     - name: Install dependencies
       run: pnpm ci
