--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -18,7 +18,7 @@ jobs:
       uses: pnpm/action-setup@v3
         
     - name: Install dependencies
-      run: pnpm ci
+      run: pnpm i
 
     - name: Run ESLint and Prettier
       run: pnpm run lint
