--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,14 +34,17 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
+      - name: Activate pnpm in corepack
+        run: corepack enable pnpm
+
       - name: Install dependencies
-        run: npm ci
+        run: pnpm i
 
       - name: Run ESLint and Prettier
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Build project
-        run: npm run build
+        run: pnpm run build
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
