--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,10 @@
   "arrowParens": "avoid",
   "trailingComma": "all",
   "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
-  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
