--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/web-bluetooth": "^0.0.20",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
