--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.352.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +36,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
